Check that struct and union field don't have initializers